--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -36,7 +36,8 @@ ul {
     padding: 5px 10px;
     border: 1px solid $red-light;
     &:hover {
-      border-color: $white;
+      background-color: $black;
+      border-color: $black;
       color: $white;
     }
     @media (max-width: 1440px) {
@@ -365,6 +366,7 @@ ul {
   .navbar {
     padding: 10px 0;
     background-color: #ffffff;
+    border-top: 1px solid transparent;
     &-brand {
       padding: 0;
       display: flex;
@@ -519,8 +521,8 @@ ul {
     .btn-red {
       border-radius: 50px;
       padding: 10px 15px;
-      &:hover {
-        border-color: $black;
+      &:hover{
+        background-color: $white;
         color: $black;
       }
       @media (max-width: 1440px) {
@@ -608,15 +610,6 @@ ul {
       text-align: center;
       margin: 4rem 0;
       width: 100%;
-      .btn-wrap {
-        .btn-red {
-          &:hover {
-            background-color: $black;
-            border-color: $black;
-            color: $white;
-          }
-        }
-      }
       @media (max-width: 1440px) {
         margin: 2rem 0;
       }
@@ -648,7 +641,6 @@ ul {
       }
       .img-wrap {
         @include d-flex-end;
-        min-height: 105px;
         img {
           z-index: 9;
         }
@@ -752,6 +744,10 @@ ul {
   &-wrap {
     background-color: #ffffff;
     padding: 5em 0;
+    .nsg-vision{
+      padding: 10px;
+      background-color: #151a1e;
+    }
     .img-wrap {
       img {
         @media (max-width: 991.98px) {
@@ -833,6 +829,10 @@ ul {
           .btn-red {
             height: 45px;
             width: max-content;
+            &:hover{
+              background-color: transparent;
+              border-color: $white;
+            }
           }
         }
       }
@@ -932,7 +932,7 @@ ul {
         padding: 0 10px;
         justify-content: flex-start;
         overflow-y: scroll;
-        height: 375px;
+        height: 390px;
 
         button {
           position: relative;
@@ -1008,12 +1008,12 @@ ul {
 
 .award-wrap {
   border: 1px solid $grey_61;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   margin-bottom: 5rem;
   background: $grey_29;
-  @media (max-width: 1440px) {
-    padding: 15px;
-  }
+  // @media (max-width: 1440px) {
+  //   padding: 15px;
+  // }
   @media (max-width: 991px) {
     margin-bottom: 1rem;
   }
@@ -1024,7 +1024,7 @@ ul {
       font-weight: 500;
       border-radius: 0;
       border: 1px solid $grey_aa;
-      padding: 8px 15px;
+      padding: 8px 10px;
       color: $white;
       &.active {
         background: $red;
@@ -1039,6 +1039,9 @@ ul {
   .link-yellow{
     min-width: 100px;
     margin-left: 10px;
+    padding: 20px 0;
+    display: block;
+    text-align: center;
     @media (max-width: 767px) {
       margin-top: 10px;
     }
@@ -1049,7 +1052,7 @@ ul {
   padding-top: 30px;
   ul {
     overflow-y: scroll;
-    height: 357px;
+    height: 325px;
     padding-right: 20px;
     li {
       margin-bottom: 20px;
@@ -1057,7 +1060,7 @@ ul {
       padding-bottom: 20px;
     }
     @media (max-width: 1440px) {
-      height: 330px;
+      height: 318px;
     }
   }
   .date {
@@ -1083,6 +1086,9 @@ ul {
 .eliminator {
   &-wrap {
     background-color: #f8f8f8;
+    &.common-bg-left{
+      overflow: hidden;
+    }
   }
   &-content {
     .heading-wrap {
@@ -1478,10 +1484,6 @@ ul {
   &-wrap {
     .btn-red {
       padding: 10px 20px;
-      &:hover {
-        border-color: #000000;
-        color: #000000;
-      }
     }
   }
   &-card-bdr {
@@ -2003,10 +2005,6 @@ ul {
     }
     .btn-red {
       padding: 10px 20px;
-      &:hover{
-        background-color: #000;
-        border-color: #000;
-      }
       @media (max-width: 767px) {
         padding: 8px 12px;
       }
@@ -2018,6 +2016,184 @@ ul {
     }
   }
 }
+.veer-accordion{
+  .veer-info{
+    ul{
+      li{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 25px;
+        .title {
+          font-size: 1em;
+          color: #000000;
+          margin: 0;
+        }
+        .desc {
+          font-size: 1.25em;
+          font-weight: 600;
+          color: #000000;
+          margin: 0;
+        }
+      }
+    }
+  }
+  .veer-img{
+    width: 245px;
+    height: 245px;
+    position: relative;
+    background-color: #f3f3f3;
+    border-radius: 50%;
+    position: relative;
+    &.offer-shradhanjali{
+        &::after {
+          content: '';
+          display: block;
+          background-image: url('../images/shradhanjali.png');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: contain;
+          width: 310px;
+          height: 265px;
+          position: absolute;
+          left: -40px;
+          right: 0;
+          top: 0;
+          bottom: 0;
+        }
+      
+    }
+    img{
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
+  }
+  .accordion{
+    &-item {
+      border: none;
+      margin-bottom: 40px;
+    }
+    &-button {
+      background-color: transparent;
+      box-shadow: none;
+      color: #CC2832;
+      font-size: 1.25rem;
+      font-weight: 600;
+      padding: 10px 15px;
+    }
+    &-body {
+      border: none;
+      padding: 40px 0 0 0;
+      .btn{
+        &:hover{
+          background: transparent;
+          border-color: #cc2832;
+          color: #cc2832;
+        }
+      }
+      .brief-btn{
+        &.active{
+          background: transparent;
+          border-color: #cc2832;
+          color: #cc2832;
+          &:hover{
+            background: transparent;
+            border-color: #cc2832;
+            color: #cc2832;
+          }
+        }
+      }
+      .brief-wrap{
+          padding-top: 40px;
+          .title {
+            color: #000000;
+            font-weight: 600;
+            font-size: 1.25em;
+            margin: 0px;
+            span{
+              font-weight: normal;
+            }
+        }
+        
+        .desc {
+          font-size: 1em;
+          line-height: 2.5;
+            color: #000000;
+            margin: 0;
+        }
+      }
+    }
+    &-header {
+      border-bottom: 1px solid #D4D4D4;
+    }
+  }
+}
+
+.sitemap-header-list {
+  padding: 40px 0;
+  ul{
+    li{
+      h3 {
+        font-size: 1.25em;
+        font-weight: 600;
+        line-height: 2.5;
+        color: #000000;
+        margin: 0;
+        position: relative;
+        padding-left: 15px;
+        &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          background: #CC2832;
+          top: 50%;
+          width: 7px;
+          height: 7px;
+          display: block;
+          border-radius: 50%;
+          transform: translate(-50%,-50%);
+        }
+      }
+      ul{
+        li{
+          list-style: disc;
+          margin: 0 0 0 30px;
+          &::marker {
+            color: #A8A8A8;
+            font-size: 18px;
+          }
+          a {
+            font-size: 1em;
+            line-height: 2.5;
+            color: #000000;
+            text-decoration: none;
+          }
+          ul{
+            li{
+              &::marker {
+                color: #ECB77A;
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.seprator{
+  hr {
+    border-top: 1px dashed #707070;
+  }
+}
+
 .site-footer {
   &-top {
     background-image: url("../images/footer-top-bg.png");
@@ -2115,7 +2291,6 @@ ul {
     }
   }
 }
-
 
 .common-table tbody tr td .size {
   font-size: 11px;
