--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -2350,3 +2350,6 @@ li.active-show a {
 .common-table tbody tr td .size {
   font-size: 11px;
 }
+.gallery-wrap .card-wrap .btn-wrap a{
+  text-decoration: none;
+}
