--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2295,3 +2295,7 @@ ul {
 .common-table tbody tr td .size {
   font-size: 11px;
 }
+
+.gallery-wrap .card-wrap .btn-wrap a{
+  text-decoration: none;
+}
