--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2292,6 +2292,11 @@ ul {
   }
 }
 
+.wrapper .link-wrap.Sidebar ul li{
+	display:block !important
+	
+}
+
 .common-table tbody tr td .size {
   font-size: 11px;
 }
