--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2315,7 +2315,7 @@ ul {
 //   filter: invert(1) !important;
 // }
 
-.veer-accordion .accordion-button{color: #000;}
+.veer-accordion .accordion-button{color: #000;font-weight: 400;}
 
 img.shradhanjali-img {
   position: absolute;
