--- a/assets-nsg/css/dark.css
+++ b/assets-nsg/css/dark.css
@@ -46,6 +46,7 @@
 .eliminator-wrap {
   background-color: #000;
 }
+.search-btn-d .btn{color: #fff;}
 
 .client-slider-content {
   padding: 40px 10px;
