Create screen reader page and fixed bugs according to bug re[port

--- a/assets-nsg/css/style.scss
+++ b/assets-nsg/css/style.scss
@@ -2395,5 +2395,7 @@ div.dt-container .dt-length label {
   font-size: 18px;
   box-shadow: none !important;
 }
-
+marquee.marquee {
+  color: #fff;
+}
 .btn:first-child:active{box-shadow: none !important;border-color: transparent;}
